# CrewAI_DoctorPatientDialogues

./: .gitignore  README.md
doctor_patient_dialogues/: .gitignore  README.md  pyproject.toml
doctor_patient_dialogues/src/doctor_patient_dialogues/: crew.py  main.py
